-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
1) Run the attached sample
2) Hit the push button
3) Hit cancel on the UIActivityViewController window that pops up
4) You will notice that when the view goes away, the main window will offset itself and no longer be on screen.
The issue can be only reproduced on iOS 7.
| For Gerrit Dashboard: QTBUG-47506 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 122972,4 | iOS: Make setFrame in desktop view take superview transforms into account | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 122973,3 | iOS: calculate bounds in desktop view using transformed window bounds for both width and height | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |